brat/test/golden/kernel/deleteSnd.brat.golden
Error in test/golden/kernel/deleteSnd.brat@FC {start = Pos {line = 2, col = 15}, end = Pos {line = 2, col = 27}}:
deleteSnd = { q0, q1 => q0 }
              ^^^^^^^^^^^^

  Type error: Variable(s) q1 haven't been used

